--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         springDataVersion = '3.2.2'
         springDataJpaVersion = '2.5.2'
         javaxAnnotationVersion = '1.3.2'
+        MIRAI_VERSION = '2.7-M2'
     }
     repositories {
         mavenCentral()
@@ -26,11 +27,12 @@ apply plugin: 'java-library'
 
 
 
-group = 'example'
+group = 'PrinzEugenPlugin'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
+    removeIf { it is MavenArtifactRepository && it.url.host == "dl.bintray.com" }
     mavenCentral()
     jcenter()
     maven { url 'https://jitpack.io' }
@@ -56,11 +58,6 @@ dependencies {
 
     implementation 'io.github.openfeign:feign-jackson:11.1'
     implementation 'io.github.openfeign:feign-core:11.1'
-
-    implementation("org.springframework:spring-context:${springCoreVersion}")
-    implementation("org.springframework.data:spring-data-mongodb:${springDataVersion}")
-    implementation("org.springframework.data:spring-data-jpa:${springDataJpaVersion}")
-    implementation("javax.annotation:javax.annotation-api:${javaxAnnotationVersion}")
     
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
