--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         springDataVersion = '3.2.2'
         springDataJpaVersion = '2.5.2'
         javaxAnnotationVersion = '1.3.2'
-        MIRAI_VERSION = '2.7-M2'
+        MIRAI_VERSION = '2.6.7'
     }
     repositories {
         mavenCentral()
@@ -32,7 +32,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-    removeIf { it is MavenArtifactRepository && it.url.host == "dl.bintray.com" }
+    //removeIf { it is MavenArtifactRepository && it.url.host == "dl.bintray.com" }
     mavenCentral()
     jcenter()
     maven { url 'https://jitpack.io' }
