--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         springDataVersion = '3.2.2'
         springDataJpaVersion = '2.5.2'
         javaxAnnotationVersion = '1.3.2'
-        MIRAI_VERSION = '2.6.7'
+        //MIRAI_VERSION = '2.6.7'
     }
     repositories {
         mavenCentral()
@@ -24,7 +24,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'java-library'
-
+apply plugin: 'maven'
 
 
 group = 'example'
@@ -45,9 +45,9 @@ configurations {
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
-test {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
 
 
 
@@ -63,6 +63,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
+    
+    testCompile "junit:junit:4.11"
 }
 
 
