--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,11 @@ apply plugin: 'maven'
 
 group = 'example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
