update gradle, mirai; Function use abstract JvmPlugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
-MIRAI_VERSION = 2.8.0
+MIRAI_VERSION = 2.10.0
+ARTIFACT_ID = mirai-fleet-framework
+GROUP = hundun.miraifleet
+VERSION = 0.0.4-SNAPSHOT
