--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
         springDataVersion = '3.2.2'
         springDataJpaVersion = '2.5.2'
         javaxAnnotationVersion = '1.3.2'
-        //MIRAI_VERSION = '2.6.7'
     }
     repositories {
         mavenCentral()
@@ -15,20 +14,19 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32' 
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.4.32'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
     id 'net.mamoe.mirai-console' version "${MIRAI_VERSION}"
 }
-
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'java-library'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 
-group = 'example'
-version = '0.0.1-SNAPSHOT'
+group = GROUP
+version = VERSION
 
 
 java {
@@ -54,9 +52,29 @@ tasks.withType(JavaCompile) {
 //    useJUnitPlatform()
 //}
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
 
+artifacts {
+    archives sourcesJar
+}
 
+publishing {
+    publications {
+        // This mavenJava can be filled in randomly, it's just a task name
+        // MavenPublication must have, this is the task class to call
+        mavenJava(MavenPublication) {
+            // The header here is the artifacts configuration information, do not fill in the default
+            groupId = GROUP
+            artifactId = ARTIFACT_ID
+            version = VERSION
 
+            from components.java
+        }
+    }
+}
 
 
 dependencies {
@@ -71,7 +89,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
     
-    testCompile "junit:junit:4.11"
+    testImplementation "junit:junit:4.11"
 }
 
 
