--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
         springDataVersion = '3.2.2'
         springDataJpaVersion = '2.5.2'
         javaxAnnotationVersion = '1.3.2'
-        //MIRAI_VERSION = '2.6.7'
     }
     repositories {
         mavenCentral()
@@ -15,20 +14,19 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32' 
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.4.32'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
     id 'net.mamoe.mirai-console' version "${MIRAI_VERSION}"
 }
-
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'java-library'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 
 group = 'example'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.4-SNAPSHOT'
 
 
 java {
@@ -56,7 +54,20 @@ tasks.withType(JavaCompile) {
 
 
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
 
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
 
 
 dependencies {
@@ -71,7 +82,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
     
-    testCompile "junit:junit:4.11"
+    testImplementation "junit:junit:4.11"
 }
 
 
