--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-MIRAI_VERSION = 2.10.0
+MIRAI_VERSION = 2.11.0-M2
 ARTIFACT_ID = mirai-fleet-framework
 GROUP = hundun.miraifleet
-VERSION = 0.0.4-SNAPSHOT
+VERSION = 0.1.0-SNAPSHOT
