--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/config/
-/bots/
-/plugins/
-/data/
+/framework-example/config/
+/framework-example/bots/
+/framework-example/plugins/
+/framework-example/data/
 
 HELP.md
 .gradle
