example buildPlugin workable

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 MIRAI_VERSION = 2.11.0-M2
-ARTIFACT_ID = mirai-fleet-framework
-GROUP = hundun.miraifleet
-VERSION = 0.1.0-SNAPSHOT
+ARTIFACT_ID_START = framework
+BUILD_PLUGIN_VERSION = 0.1.0-SNAPSHOT
