--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
 buildscript {
     ext {
-        springCoreVersion = '5.3.8'
-        springDataVersion = '3.2.2'
-        springDataJpaVersion = '2.5.2'
-        javaxAnnotationVersion = '1.3.2'
+        
     }
     repositories {
         mavenCentral()
@@ -20,29 +17,25 @@ plugins {
 }
 
 allprojects {
-    
-    apply plugin: 'eclipse'
-
     repositories {
         mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
+}
+
+subprojects {
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
+    apply plugin: 'net.mamoe.mirai-console'
+    apply plugin: 'eclipse'
+    apply plugin: 'java'
+    apply plugin: 'java-library'
     
     java {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
-
-}
-
-subprojects {
-    apply plugin: 'java'
-    apply plugin: 'java-library'
-    
-    apply plugin: 'org.jetbrains.kotlin.jvm'
-    apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
-    apply plugin: 'net.mamoe.mirai-console'
     
     configurations {
         compileOnly {
@@ -53,18 +46,18 @@ subprojects {
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
     }
-    //test {
-    //    useJUnitPlatform()
-    //}
+//    test {
+//        useJUnitPlatform()
+//    }
     
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
-    
-    artifacts {
-        archives sourcesJar
-    }
+//    task sourcesJar(type: Jar, dependsOn: classes) {
+//        classifier = 'sources'
+//        from sourceSets.main.allSource
+//    }
+//    
+//    artifacts {
+//        archives sourcesJar
+//    }
 }
 
 
@@ -76,8 +69,6 @@ project(":framework-core") {
     eclipse.project.name = rootProject.name + "-core"
 
     dependencies {
-
-    
         api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.4'
     
         compileOnly 'org.projectlombok:lombok:1.18.4'
@@ -86,13 +77,10 @@ project(":framework-core") {
     
     publishing {
         publications {
-            // This mavenJava can be filled in randomly, it's just a task name
-            // MavenPublication must have, this is the task class to call
             mavenJava(MavenPublication) {
-                // The header here is the artifacts configuration information, do not fill in the default
-                groupId = GROUP
-                artifactId = ARTIFACT_ID + "-core"
-                version = VERSION
+                // useless for jitpack: groupId = GROUP
+                artifactId = ARTIFACT_ID_START + "-core"
+                // useless for jitpack: version = VERSION
     
                 from components.java
             }
@@ -120,13 +108,10 @@ project(":framework-starter") {
     
     publishing {
         publications {
-            // This mavenJava can be filled in randomly, it's just a task name
-            // MavenPublication must have, this is the task class to call
             mavenJava(MavenPublication) {
-                // The header here is the artifacts configuration information, do not fill in the default
-                groupId = GROUP
-                artifactId = ARTIFACT_ID + "-starter"
-                version = VERSION
+                // useless for jitpack: groupId = GROUP
+                artifactId = ARTIFACT_ID_START + "-starter"
+                // useless for jitpack: version = VERSION
     
                 from components.java
             }
@@ -135,14 +120,16 @@ project(":framework-starter") {
 }
 
 project(":framework-example") {
-    group = GROUP
-    version = VERSION
+    // useless for builPlugin: group = GROUP
+    version = BUILD_PLUGIN_VERSION
     
     eclipse.project.name = rootProject.name + "-example"    
 
     dependencies {
-        implementation project(":framework-core")
-        implementation project(":framework-starter")
+        //implementation project(":framework-core")
+        //implementation project(":framework-starter")
+        implementation 'com.github.hundun000.mirai-fleet-framework:mirai-fleet-framework-core:0.5.0'
+        implementation 'com.github.hundun000.mirai-fleet-framework:mirai-fleet-framework-starter:0.5.0'
         
         compileOnly 'org.projectlombok:lombok:1.18.4'
         annotationProcessor 'org.projectlombok:lombok:1.18.4'
