--- a/build.gradle
+++ b/build.gradle
@@ -50,14 +50,14 @@ subprojects {
 //        useJUnitPlatform()
 //    }
     
-//    task sourcesJar(type: Jar, dependsOn: classes) {
-//        classifier = 'sources'
-//        from sourceSets.main.allSource
-//    }
-//    
-//    artifacts {
-//        archives sourcesJar
-//    }
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+    
+    artifacts {
+        archives sourcesJar
+    }
 }
 
 
