--- a/build.gradle
+++ b/build.gradle
@@ -126,10 +126,10 @@ project(":framework-example") {
     eclipse.project.name = rootProject.name + "-example"    
 
     dependencies {
-        //implementation project(":framework-core")
-        //implementation project(":framework-starter")
-        implementation 'com.github.hundun000.mirai-fleet-framework:mirai-fleet-framework-core:0.5.0'
-        implementation 'com.github.hundun000.mirai-fleet-framework:mirai-fleet-framework-starter:0.5.0'
+        implementation project(":framework-core")
+        implementation project(":framework-starter")
+        //implementation 'com.github.hundun000.mirai-fleet-framework:mirai-fleet-framework-core:0.5.0'
+        //implementation 'com.github.hundun000.mirai-fleet-framework:mirai-fleet-framework-starter:0.5.0'
         
         compileOnly 'org.projectlombok:lombok:1.18.4'
         annotationProcessor 'org.projectlombok:lombok:1.18.4'
