--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'mirai-fleet-framework'
 include 'framework-core'
 include 'framework-example'
 include 'framework-starter'
+include 'framework-helper'
